tests/NormalTests/paczka1/fuzzy1/87162393.err
Error in line 1: GiaT S857 26,3
Error in line 2: S271 S857 65,6
Error in line 3: SZO A268 52,3
Error in line 6: SZO S271 42,8
Error in line 11: ZARzOP S857 79,5
Error in line 14: GiaT A997 54,0
Error in line 10: SZO A268 65,9
Error in line 21: GiaT S271 19,8
Error in line 25: SZO A997 21,1
